docs/7.57/md/abenamdp_client_handling.md
---
title: "AMDP - Client Handling"
description: |
  AMDP does not support implicit client handling(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sql_client_handling.htm). When accessing client-dependent database tables or views in an AMDP method, the required client ID must be selected explicitly. Therefore, the parameter inte
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_client_handling.htm"
abapFile: "abenamdp_client_handling.htm"
keywords: ["select", "do", "if", "case", "try", "method", "class", "data", "abenamdp", "client", "handling"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_access.htm) →  [ABAP Managed Database Procedures (AMDP)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: AMDP - Client Handling, ABENAMDP_CLIENT_HANDLING, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0
D%0A%0D%0ASuggestion for improvement:)

AMDP - Client Handling

AMDP does not support [implicit client handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sql_client_handling.htm). When accessing client-dependent database tables or views in an AMDP method, the required client ID must be selected explicitly. Therefore, the parameter interface of an AMDP method must usually contain an input parameter for the client ID, and this parameter must be used in a WHERE condition. Exceptions to this rule are explained in the note below.

Hints

-   Using an input parameter for the client ID is particularly advisable for [AMDP function implementations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_function_methods.htm) of [client-dependent CDS table functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_func_client_handling.htm). In ABAP SQL reads, only the data of the current client or clients specified using [USING CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect_client.htm) in the result set is respected by default. Selecting exactly this data in the function implementation is recommended both for performance reasons and to ensure that the correct data is read.
-   In [SQLScript](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_hdb_sqlscript.htm) implementations, the built-in function SESSION\_CONTEXT can also be used to access the [ABAP-specific session variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_session_variables.htm) CLIENT and CDS\_CLIENT of the SAP HANA database. In a call from ABAP, these variables contain a client ID:
    
    -   CLIENT always contains the nominal value of the ABAP system field [sy-mandt](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensystem_fields.htm).
    -   CDS\_CLIENT contains the same value as CLIENT by default, but can be modified during the execution of an ABAP SQL statement by the addition [USING CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect_client.htm) and in an AMDP method call from ABAP by the addition [AMDP OPTIONS CDS SESSION CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_amdp_options.htm).
    
    Access of this type should be used only if it is guaranteed that an AMDP method is called only from ABAP and accesses exactly the data of this client ID. In other cases, the result is undefined. Therefore, it is usually recommended that an input parameter is used to pass the required client ID to AMDP functions and use it as an access condition.
    
-   An exception to this rule is when reading [CDS-managed DDIC views (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_mngdddic_view_glosry.htm "Glossary Entry") of [client-dependent](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_view_client_handling_v1.htm) CDS views whose client handling is defined by the annotation [@ClientHandling.algorithm:#SESSION\_VARIABLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_view_client_handling_v1.htm). A DDIC database view of this type usually evaluates the [session variable](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensession_variable_glosry.htm "Glossary Entry") of the database that is mapped to the CDS session variable [$session.client](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_session_variable_v1.htm). In a SAP HANA database this is the HANA session variable [CDS\_CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_session_variables.htm). If, in the implementation of an AMDP method, a WHERE condition selects a client ID other than that contained in the session variable CDS\_CLIENT, the result set is empty in this case. For this reason, when a CDS-managed DDIC view (obsolete) of this type is accessed in the implementation of an AMDP method, no WHERE condition can be used for the client ID and the session variable must be set to the required value instead. The addition [AMDP OPTIONS CDS SESSION CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_amdp_options.htm) can be used for this purpose in the declaration of the method with [METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods.htm) or [CLASS-METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods.htm). Without this addition, a syntax error occurs when a CDS-managed DDIC view (obsolete) of this type is accessed. However, this is only significant for general [AMDP procedure implementations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_procedure_method_glosry.htm "Glossary Entry"), which are called in the same way as normal methods in ABAP. In an [AMDP function implementation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_function_method_glosry.htm "Glossary Entry") that is used as a [CDS table function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_table_function_glosry.htm "Glossary Entry") in the ABAP SQL statement [SELECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect.htm), the session variable can be set with the addition [USING CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect.htm). See the example for the option [SESSION CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_amdp_options.htm).

Example

The executable example of how to [implement an SQLScript procedure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_abexa.htm) demonstrates explicit client handling using an input parameter and using the ABAP-specific session variable CLIENT.